<resources>
    <string name="app_name">Private Lessons</string>
    <string name="applogo">App Logo</string>
    <string name="login_activity_loginBtn">LOG IN</string>
    <string name="log_in">Log In</string>
    <string name="email_or_username">Email or username</string>
    <string name="password">Password</string>
    <string name="dont_t_have_an_account_create_one">Don\'t have an account? Create one</string>
    <string name="pri_less">PriLESS</string>
    <string name="private_lessons_for_everyone">Private lessons for everyone</string>
    <string name="logging_in_snackbar">Logging in...</string>
    <string name="logged_in_successfully">Logged in successfully</string>
    <string name="courses">Courses</string>
    <string name="account">Account</string>
    <string name="image_avatar">image_avatar</string>
    <string name="history">History</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="booked_lessons">Booked lessons</string>
    <string name="total_lessons_booked">Total lessons booked</string>
    <string name="toolbar_logout">Logout</string>
    <string name="toolbar_login">Login</string>
    <string name="deleted_teacher">Teacher has been deleted</string>
    <string name="deleted_course">Course has been deleted</string>
    <string name="icon_booking_description_book">Book</string>
    <string name="select_lesson_dialog_message">Select a lesson to book</string>
    <string name="book_lesson_dialog_message">Log in to book a lesson</string>
</resources>
