<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/login_activity_root"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".pages.loginpage.LoginView"
    tools:ignore="ExtraText">

    <LinearLayout
        android:layout_marginTop="72dp"
        android:id="@+id/login_activity_logo_container"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginEnd="10dp"
            android:id="@+id/login_activity_icon"
            android:src="@drawable/ic_import_contacts_white_48"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />

        <TextView
            android:id="@+id/login_activity_logo"
            android:text="@string/pri_less"
            android:textColor="@android:color/white"
            android:textSize="48sp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            />

    </LinearLayout>

    <TextView
        android:textSize="16sp"
        android:textStyle="italic"
        android:textColor="@android:color/white"
        android:text="@string/private_lessons_for_everyone"
        android:layout_centerHorizontal="true"
        android:id="@+id/login_activity_logoMotto"
        android:layout_below="@id/login_activity_logo_container"
        android:layout_marginBottom="60dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" />

    <FrameLayout
        android:id="@+id/login_activity_inputsContainerFrameLayout"
        android:layout_below="@id/login_activity_logoMotto"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_width="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/login_activity_inputsContainer"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="25dp"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:elevation="3dp"
            android:layout_width="match_parent"
            >

            <LinearLayout
                android:layout_marginBottom="20dp"
                android:padding="20dp"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="26sp"
                    android:text="@string/log_in"
                    />

                <TextView
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="30dp"
                    android:text="@string/email_or_username"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" />

                <EditText
                    android:id="@+id/login_activity_edtEmail"
                    android:backgroundTint="@color/colorPrimary"
                    android:inputType="textEmailAddress|text"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:importantForAutofill="no" />

                <TextView
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="25dp"
                    android:text="@string/password"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" />

                <EditText
                    android:id="@+id/login_activity_edtPassword"
                    android:backgroundTint="@color/colorPrimary"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:importantForAutofill="no" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_activity_btnLogin"
            style="@style/AppTheme.Button"
            android:textColor="@android:color/white"
            android:text="@string/login_activity_loginBtn"
            android:textSize="16sp"
            android:paddingEnd="50dp"
            android:paddingStart="50dp"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_height="50dp"
            android:layout_width="wrap_content" />

    </FrameLayout>

    <TextView
        android:layout_marginTop="16dp"
        android:textColor="@android:color/black"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login_activity_inputsContainerFrameLayout"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/dont_t_have_an_account_create_one"/>


</RelativeLayout>